[package]
name = "route-builder"
version = "0.1.0"
authors = ["co-jo <colin.hryniowski@dell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.8.4"
prettytable-rs = "^0.8"
ansi_term = "^0.12.0"
